# TegraK1_Performance

./: README.md
Implementation/: CMakeLists.txt
Implementation/lib/flycapture2/lib/C/: libflycapture-c.so.2  libflycapturegui-c.so.2
Implementation/src/application/: main.cpp
Implementation/src/controller/: ModifyAlgorithmParametersController.cpp  UpdateBenchmarkController.cpp
Implementation/src/controller/av/: SelectAVController.cpp  StartAVController.cpp  StartAVController.hpp
Implementation/src/model/: Benchmark.cpp  Benchmark.hpp
Implementation/src/model/av/: AV.cpp  AV.hpp  AVManager.cpp  AVManager.hpp  AVTypes.cpp  AVTypes.hpp  BackgroundSubstractor.cpp  BackgroundSubstractor.hpp  FaceDetection.cpp  FaceDetection.hpp  OpticalFlow.cpp  OpticalFlow.hpp  PedestrianDetection.cpp  PedestrianDetection.hpp
Implementation/src/model/av/events/: AVSelectedEvent.cpp  AVSelectedEvent.hpp  AVStarted.cpp  AVStarted.hpp  AlgorithmParametersModified.cpp  AlgorithmParametersModified.hpp
Implementation/src/model/events/: BenchmarkUpdatedEvent.cpp  BenchmarkUpdatedEvent.hpp
Implementation/src/view/av/: AVCircle.cpp  AVRectangle.cpp  AVRectangle.hpp  AVRenderManager.cpp  AVRenderManager.hpp  AVView.cpp  AVView.hpp  BackgroundSubtractor.cpp  BackgroundSubtractor.hpp  FaceDetection.cpp  FaceDetection.hpp  OpticalFlow.cpp  OpticalFlow.hpp  PedestrianDetection.cpp  PedestrianDetection.hpp  TestCudaGpu.cpp  TestCudaGpu.hpp
Implementation/src/view/av/events/: UpdateBenchmarkEvent.cpp  UpdateBenchmarkEvent.hpp
Implementation/src/view/gui/: FlyCaptureVideoPlayer.cpp  FlyCaptureVideoPlayer.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OpenCVVideoPlayer.cpp  OpenCVVideoPlayer.hpp  OpenGLCVPort.cpp  OpenGLCVPort.hpp
Implementation/src/view/gui/container/: ViewElements.cpp  ViewElements.hpp
Implementation/src/view/gui/events/: ModifyBackgroundSubstractorEvent.cpp  ModifyBackgroundSubstractorEvent.hpp  ModifyFaceDetectionEvent.cpp  ModifyFaceDetectionEvent.hpp  ModifyOpticalFlowEvent.cpp  ModifyOpticalFlowEvent.hpp  ModifyPedestrianDetectorEvent.cpp  ModifyPedestrianDetectorEvent.hpp
Implementation/src/view/gui/qtUtil/: qcustomplot.cpp
Implementation/src/view/gui/videoplayer/: FlyCaptureVideoPlayer.cpp  FlyCaptureVideoPlayer.hpp  OpenCVVideoPlayer.cpp  OpenCVVideoPlayer.hpp  VideoPlayer.cpp  VideoPlayer.hpp  VideoPlayerManager.cpp  VideoPlayerManager.hpp
Implementation/src/view/gui/widgets/: BenchmarkingWidget.cpp  BenchmarkingWidget.hpp  BenchmarkingWidget.ui  ControlPanel.cpp  ControlPanel.hpp  ControlPanel.ui  ControlPanelWidget.cpp  (+5 more)
Implementation/src/view/opencv/: OpenCV.cpp  OpenCV.hpp
(+17 files in other folders)
